Fix : overflow

--- a/sass/abstracts/_avriables.scss
+++ b/sass/abstracts/_avriables.scss
@@ -18,11 +18,12 @@ $main_font_family  : 'Roboto    , sans-serif ' ;
 $second_font_family  : 'RopaSans  ,  sans-serif' ;
 
 // break point 
-$desktop : 900px ;
+$desktop : 1022px ;
 $phone : 310px ;
 
 
 //nav 
-$nav_width : 175px ;
+$nav_width : 10% ;
+$main_width: 90%;
 
 $section_padding : 20px
