--- a/sass/base/_resets.scss
+++ b/sass/base/_resets.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body , html {
-    overflow-x:  hidden;
+    // overflow-x:  hidden;
     scroll-behavior: smooth;
 }
 
@@ -49,5 +49,5 @@ ul {
     background-color: $primery_blue;
     padding : 20px ;
     margin: 10px;
-    border
+    
 }
