--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,14 +1,21 @@
 .nav{
+    position: relative;
+    z-index: 99999;
     width: 0px;
     transition: 0.3s ease;
     overflow: hidden;
+    &_list{
+        margin-top:20px;
+        margin-left: 10px;;
+    }
 }
 
 // desktop 
 @media screen and(min-width : $desktop) {
     .nav{
         --nav-padding:6px ; 
-        position: fixed;
+        position: sticky;
+        z-index: inherit;
         top:0px ;
         left:0px ;
         margin:0px;
@@ -20,7 +27,7 @@
             --logo_height:61px ; 
             
             width: 61px ;
-            height: --height;
+            height: var(--height);
             img{
                 width: inherit;
             }
@@ -28,28 +35,66 @@
         }
         &_list{
             padding-left: 10px;   
-            &:after{
+            position: relative;
+            &::before{
                 content: '';
                 position: absolute;
-                width : 3px;
-                height: 200px;
-                color : gray;
-                left: 4px;
-                top: calc(var(--nav-padding) + var(--nav-padding))
+                width : 2px;
+                height: 260px;
+                margin: 0px;
+                background-color : rgb(235, 235, 235);
+                left: 0px;
+                top: calc(var(--nav-padding) - 5px) ;
+                opacity: 0.6;
+            }
+            &:after{
+                content: 'fatima.alamshhor@gmail.com';
+                position: absolute;
+                width : 1px;
+                margin: 0px;
+                left: 0px;
+                top: 460px ;
+                transform: rotate(-90deg);
             }
             li{
                 line-height: 45px;
-                &:before{
-                    content : ' '; 
-                    position :absolute;
-                    width : 2px ;
-                    height: auto;
-                    color: white
+                position: relative;
+                height: 45px;
+                &:hover{
+                    &:before{
+                        content : ''; 
+                        position :absolute;
+                        width : 3px ;
+                        left: -10px;
+                        border-radius: 10px;
+                        z-index: 5;
+                        height: inherit;
+                        background-color: $primery_red ;
+                    }
                 }
-                .active{
-                    padding: 7px 20px;
-                    background-color: $primery_blue;
-                    // opacity: 0.4;
+               
+            }
+            .active{
+                // padding: 7px 20px;
+                &::after{
+                    content : ''; 
+                    position :absolute;
+                    width : 100% ;
+                    left: -8px;
+                    z-index: 5;
+                    height: inherit;
+                    background-color: $primery_blue ;
+                    opacity: 0.4;
+                }
+                &:before{
+                    content : ''; 
+                    position :absolute;
+                    width : 3px ;
+                    left: -10px;
+                    border-radius: 10px;
+                    z-index: 5;
+                    height: inherit;
+                    background-color: $primery_red ;
                 }
             }
         }
