--- a/sass/components/_saprateors.scss
+++ b/sass/components/_saprateors.scss
@@ -3,9 +3,9 @@
     font-weight: bold;
     font-family: sans-serif;
     position: absolute;
-    opacity: 0.4;
-    top:-19%;
-    left: -10%;
+    opacity: 0.2;
+    top:0px;
+    left: -20px;
     color:gray;
     z-index: -1;
 }
@@ -14,9 +14,18 @@
     position:absolute;
     font-size: $md_font_size;
     right: 0px;
+    bottom: 0px;
     color:$primery_red;
-}
-.section_numberic__lower::before{
-    content: '';
-
+    
+    &::before{
+        content: '';
+        position: absolute;
+        width : 500px;
+        height: 2px;
+        border-radius: 10px;
+        bottom: 28px;
+        background-color: white;
+        right: 90px;
+        opacity: 0.3;
+    }
 }
